<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.vutbr.fit.gja.rssreader.MainActivity" >

    <item android:id="@+id/menu_refresh"
          android:icon="@drawable/ic_refresh"
          android:title="@string/menu_refresh"
          app:showAsAction="ifRoom"/>
	<!-- Nepridavat nad tento prvek zadne dalsi! Zmena text je hardcoded dle pozice -->
    <item
        android:id="@+id/menu_show_readed"
        android:orderInCategory="100"
        android:title="@string/menu_show_readed"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_add_source"
        android:orderInCategory="100"
        android:title="@string/menu_add_source"
        app:showAsAction="never"/>
    
    
    <item
        android:id="@+id/menu_manage_sources"
        android:orderInCategory="100"
        android:title="@string/menu_manage_sources"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_add_category"
        android:orderInCategory="100"
        android:title="@string/menu_add_category"
        app:showAsAction="never"/>
        
    <item
        android:id="@+id/menu_manage_categories"
        android:orderInCategory="100"
        android:title="@string/menu_manage_categories"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    
</menu>
